include/libheif/heif.h

struct heif_image_handle;
struct heif_image;
enum heif_error_code
{
  heif_error_Ok = 0,
  heif_error_Input_does_not_exist = 1,
  heif_error_Invalid_input = 2,
  heif_error_Unsupported_filetype = 3,
  heif_error_Unsupported_feature = 4,
  heif_error_Usage_error = 5,
  heif_error_Memory_allocation_error = 6,
  heif_error_Decoder_plugin_error = 7,
  heif_error_Encoder_plugin_error = 8,
  heif_error_Encoding_error = 9,
  heif_error_Color_profile_does_not_exist = 10,
  heif_error_Plugin_loading_error = 11,
  heif_error_Canceled = 12
};
enum heif_suberror_code
{
  heif_suberror_Unspecified = 0,
  heif_suberror_End_of_data = 100,
  heif_suberror_Invalid_box_size = 101,
  heif_suberror_No_ftyp_box = 102,
  heif_suberror_No_idat_box = 103,
  heif_suberror_No_meta_box = 104,
  heif_suberror_No_hdlr_box = 105,
  heif_suberror_No_hvcC_box = 106,
  heif_suberror_No_pitm_box = 107,
  heif_suberror_No_ipco_box = 108,
  heif_suberror_No_ipma_box = 109,
  heif_suberror_No_iloc_box = 110,
  heif_suberror_No_iinf_box = 111,
  heif_suberror_No_iprp_box = 112,
  heif_suberror_No_iref_box = 113,
  heif_suberror_No_pict_handler = 114,
  heif_suberror_Ipma_box_references_nonexisting_property = 115,
  heif_suberror_No_properties_assigned_to_item = 116,
  heif_suberror_No_item_data = 117,
  heif_suberror_Invalid_grid_data = 118,
  heif_suberror_Missing_grid_images = 119,
  heif_suberror_Invalid_clean_aperture = 120,
  heif_suberror_Invalid_overlay_data = 121,
  heif_suberror_Overlay_image_outside_of_canvas = 122,
  heif_suberror_Auxiliary_image_type_unspecified = 123,
  heif_suberror_No_or_invalid_primary_item = 124,
  heif_suberror_No_infe_box = 125,
  heif_suberror_Unknown_color_profile_type = 126,
  heif_suberror_Wrong_tile_image_chroma_format = 127,
  heif_suberror_Invalid_fractional_number = 128,
  heif_suberror_Invalid_image_size = 129,
  heif_suberror_Invalid_pixi_box = 130,
  heif_suberror_No_av1C_box = 131,
  heif_suberror_Wrong_tile_image_pixel_depth = 132,
  heif_suberror_Unknown_NCLX_color_primaries = 133,
  heif_suberror_Unknown_NCLX_transfer_characteristics = 134,
  heif_suberror_Unknown_NCLX_matrix_coefficients = 135,
  heif_suberror_Invalid_region_data = 136,
  heif_suberror_No_ispe_property = 137,
  heif_suberror_Camera_intrinsic_matrix_undefined = 138,
  heif_suberror_Camera_extrinsic_matrix_undefined = 139,
  heif_suberror_Invalid_J2K_codestream = 140,
  heif_suberror_No_vvcC_box = 141,
  heif_suberror_No_icbr_box = 142,
  heif_suberror_No_avcC_box = 143,
  heif_suberror_Invalid_mini_box = 149,
  heif_suberror_Decompression_invalid_data = 150,
  heif_suberror_Security_limit_exceeded = 1000,
  heif_suberror_Compression_initialisation_error = 1001,
  heif_suberror_Nonexisting_item_referenced = 2000, 
  heif_suberror_Null_pointer_argument = 2001,
  heif_suberror_Nonexisting_image_channel_referenced = 2002,
  heif_suberror_Unsupported_plugin_version = 2003,
  heif_suberror_Unsupported_writer_version = 2004,
  heif_suberror_Unsupported_parameter = 2005,
  heif_suberror_Invalid_parameter_value = 2006,
  heif_suberror_Invalid_property = 2007,
  heif_suberror_Item_reference_cycle = 2008,
  heif_suberror_Unsupported_codec = 3000,
  heif_suberror_Unsupported_image_type = 3001,
  heif_suberror_Unsupported_data_version = 3002,
  heif_suberror_Unsupported_color_conversion = 3003,
  heif_suberror_Unsupported_item_construction_method = 3004,
  heif_suberror_Unsupported_header_compression_method = 3005,
  heif_suberror_Unsupported_generic_compression_method = 3006,
  heif_suberror_Unsupported_essential_property = 3007,
  heif_suberror_Unsupported_bit_depth = 4000,
  heif_suberror_Cannot_write_output_data = 5000,
  heif_suberror_Encoder_initialization = 5001,
  heif_suberror_Encoder_encoding = 5002,
  heif_suberror_Encoder_cleanup = 5003,
  heif_suberror_Too_many_regions = 5004,
  heif_suberror_Plugin_loading_error = 6000,         
  heif_suberror_Plugin_is_not_loaded = 6001,         
  heif_suberror_Cannot_read_plugin_directory = 6002, 
  heif_suberror_No_matching_decoder_installed = 6003 
};
struct heif_error
{
  enum heif_error_code code;
  enum heif_suberror_code subcode;
  const char* message;
};
enum heif_chroma
{
  heif_chroma_undefined = 99,
  heif_chroma_monochrome = 0,
  heif_chroma_420 = 1,
  heif_chroma_422 = 2,
  heif_chroma_444 = 3,
  heif_chroma_interleaved_RGB = 10,
  heif_chroma_interleaved_RGBA = 11,
  heif_chroma_interleaved_RRGGBB_BE = 12,   
  heif_chroma_interleaved_RRGGBBAA_BE = 13, 
  heif_chroma_interleaved_RRGGBB_LE = 14,   
  heif_chroma_interleaved_RRGGBBAA_LE = 15  
};
enum heif_colorspace
{
  heif_colorspace_undefined = 99,
  heif_colorspace_YCbCr = 0,
  heif_colorspace_RGB = 1,
  heif_colorspace_monochrome = 2,
  heif_colorspace_nonvisual = 3
};
struct heif_decoding_options;
enum heif_color_profile_type
{
  heif_color_profile_type_not_present = 0,
  heif_color_profile_type_nclx = heif_fourcc('n', 'c', 'l', 'x'),
  heif_color_profile_type_rICC = heif_fourcc('r', 'I', 'C', 'C'),
  heif_color_profile_type_prof = heif_fourcc('p', 'r', 'o', 'f')
};
enum heif_color_primaries
{
  heif_color_primaries_ITU_R_BT_709_5 = 1, 
  heif_color_primaries_unspecified = 2,
  heif_color_primaries_ITU_R_BT_470_6_System_M = 4,
  heif_color_primaries_ITU_R_BT_470_6_System_B_G = 5,
  heif_color_primaries_ITU_R_BT_601_6 = 6,
  heif_color_primaries_SMPTE_240M = 7,
  heif_color_primaries_generic_film = 8,
  heif_color_primaries_ITU_R_BT_2020_2_and_2100_0 = 9,
  heif_color_primaries_SMPTE_ST_428_1 = 10,
  heif_color_primaries_SMPTE_RP_431_2 = 11,
  heif_color_primaries_SMPTE_EG_432_1 = 12,
  heif_color_primaries_EBU_Tech_3213_E = 22
};
enum heif_transfer_characteristics
{
  heif_transfer_characteristic_ITU_R_BT_709_5 = 1,
  heif_transfer_characteristic_unspecified = 2,
  heif_transfer_characteristic_ITU_R_BT_470_6_System_M = 4,
  heif_transfer_characteristic_ITU_R_BT_470_6_System_B_G = 5,
  heif_transfer_characteristic_ITU_R_BT_601_6 = 6,
  heif_transfer_characteristic_SMPTE_240M = 7,
  heif_transfer_characteristic_linear = 8,
  heif_transfer_characteristic_logarithmic_100 = 9,
  heif_transfer_characteristic_logarithmic_100_sqrt10 = 10,
  heif_transfer_characteristic_IEC_61966_2_4 = 11,
  heif_transfer_characteristic_ITU_R_BT_1361 = 12,
  heif_transfer_characteristic_IEC_61966_2_1 = 13,
  heif_transfer_characteristic_ITU_R_BT_2020_2_10bit = 14,
  heif_transfer_characteristic_ITU_R_BT_2020_2_12bit = 15,
  heif_transfer_characteristic_ITU_R_BT_2100_0_PQ = 16,
  heif_transfer_characteristic_SMPTE_ST_428_1 = 17,
  heif_transfer_characteristic_ITU_R_BT_2100_0_HLG = 18
};
enum heif_matrix_coefficients
{
  heif_matrix_coefficients_RGB_GBR = 0,
  heif_matrix_coefficients_ITU_R_BT_709_5 = 1,  
  heif_matrix_coefficients_unspecified = 2,
  heif_matrix_coefficients_US_FCC_T47 = 4,
  heif_matrix_coefficients_ITU_R_BT_470_6_System_B_G = 5,
  heif_matrix_coefficients_ITU_R_BT_601_6 = 6,  
  heif_matrix_coefficients_SMPTE_240M = 7,
  heif_matrix_coefficients_YCgCo = 8,
  heif_matrix_coefficients_ITU_R_BT_2020_2_non_constant_luminance = 9,
  heif_matrix_coefficients_ITU_R_BT_2020_2_constant_luminance = 10,
  heif_matrix_coefficients_SMPTE_ST_2085 = 11,
  heif_matrix_coefficients_chromaticity_derived_non_constant_luminance = 12,
  heif_matrix_coefficients_chromaticity_derived_constant_luminance = 13,
  heif_matrix_coefficients_ICtCp = 14
};
struct heif_color_profile_nclx
{
  uint8_t version;
  enum heif_color_primaries color_primaries;
  enum heif_transfer_characteristics transfer_characteristics;
  enum heif_matrix_coefficients matrix_coefficients;
  uint8_t full_range_flag;
  float color_primary_red_x, color_primary_red_y;
  float color_primary_green_x, color_primary_green_y;
  float color_primary_blue_x, color_primary_blue_y;
  float color_primary_white_x, color_primary_white_y;
};
LIBHEIF_API
struct heif_error heif_nclx_color_profile_set_color_primaries(struct heif_color_profile_nclx* nclx, uint16_t cp);
LIBHEIF_API
struct heif_error heif_nclx_color_profile_set_transfer_characteristics(struct heif_color_profile_nclx* nclx, uint16_t transfer_characteristics);
LIBHEIF_API
struct heif_error heif_nclx_color_profile_set_matrix_coefficients(struct heif_color_profile_nclx* nclx, uint16_t matrix_coefficients);
LIBHEIF_API
struct heif_error heif_image_handle_get_nclx_color_profile(const struct heif_image_handle* handle,
                                                           struct heif_color_profile_nclx** out_data);
LIBHEIF_API
struct heif_color_profile_nclx* heif_nclx_color_profile_alloc(void);
LIBHEIF_API
void heif_nclx_color_profile_free(struct heif_color_profile_nclx* nclx_profile);
LIBHEIF_API
enum heif_color_profile_type heif_image_get_color_profile_type(const struct heif_image* image);
LIBHEIF_API
size_t heif_image_get_raw_color_profile_size(const struct heif_image* image);
LIBHEIF_API
struct heif_error heif_image_get_raw_color_profile(const struct heif_image* image,
                                                   void* out_data);
LIBHEIF_API
struct heif_error heif_image_get_nclx_color_profile(const struct heif_image* image,
                                                    struct heif_color_profile_nclx** out_data);
enum heif_progress_step
{
  heif_progress_step_total = 0,
  heif_progress_step_load_tile = 1
};
enum heif_chroma_downsampling_algorithm
{
  heif_chroma_downsampling_nearest_neighbor = 1,
  heif_chroma_downsampling_average = 2,
  heif_chroma_downsampling_sharp_yuv = 3
};
enum heif_chroma_upsampling_algorithm
{
  heif_chroma_upsampling_nearest_neighbor = 1,
  heif_chroma_upsampling_bilinear = 2
};
struct heif_color_conversion_options
{
  uint8_t version;
  enum heif_chroma_downsampling_algorithm preferred_chroma_downsampling_algorithm;
  enum heif_chroma_upsampling_algorithm preferred_chroma_upsampling_algorithm;
  uint8_t only_use_preferred_chroma_algorithm;
};
struct heif_decoding_options
{
  uint8_t version;
  uint8_t ignore_transformations;
  void (* start_progress)(enum heif_progress_step step, int max_progress, void* progress_user_data);
  void (* on_progress)(enum heif_progress_step step, int progress, void* progress_user_data);
  void (* end_progress)(enum heif_progress_step step, void* progress_user_data);
  void* progress_user_data;
  uint8_t convert_hdr_to_8bit;
  uint8_t strict_decoding;
  const char* decoder_id;
  struct heif_color_conversion_options color_conversion_options;
  int (* cancel_decoding)(void* progress_user_data);
};
LIBHEIF_API
struct heif_decoding_options* heif_decoding_options_alloc(void);
LIBHEIF_API
void heif_decoding_options_free(struct heif_decoding_options*);